--- a/include/comparison_table.html
+++ b/include/comparison_table.html
@@ -1,30 +1,30 @@
-<table border="1" cellspacing="0" cellpadding="5">
+<table border="1" cellpadding="5" cellspacing="0" style="width: 100%; border-collapse: collapse;">
     <thead>
         <tr>
             <th>Название экскурсии</th>
             <th>Цена (руб.)</th>
-            <th>Сложность</th>
             <th>Плюсы</th>
+            <th>Отзывы</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>Прогулка к водопадам Джур-Джур и Руфабго</td>
-            <td>2900</td>
-            <td>Низкая</td>
+            <td>2 900</td>
             <td>Подходит для начинающих, интересные истории, возможность купания</td>
+            <td>Красивые виды, доброжелательный гид, хорошая организация</td>
         </tr>
         <tr>
             <td>Поход к водопаду Джур-Джур</td>
-            <td>2700</td>
-            <td>Невысокая</td>
-            <td>Отличное место для фото, вкусные перекусы, удобная программа</td>
+            <td>2 700</td>
+            <td>Отличное место для фото, вкусные перекусы, невысокая сложность</td>
+            <td>Хороший уровень подготовки гида, удобная программа</td>
         </tr>
         <tr>
             <td>Поход к водопаду Крым-Гиреевский</td>
             <td>Не указана</td>
-            <td>Низкая</td>
             <td>Мало туристов, уникальная природа, душевная атмосфера</td>
+            <td>Спокойствие, внимание гида, сочетание природы</td>
         </tr>
     </tbody>
 </table>
