--- a/include/comparison_table.html
+++ b/include/comparison_table.html
@@ -1,4 +1,4 @@
-<table border="1" cellpadding="5" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+<table border="1" cellspacing="0" cellpadding="5">
     <thead>
         <tr>
             <th>Название экскурсии</th>
@@ -11,20 +11,20 @@
         <tr>
             <td>Прогулка к водопадам Джур-Джур и Руфабго</td>
             <td>2 900</td>
-            <td>Подходит для начинающих, интересные истории, возможность купания</td>
+            <td>Подходит для начинающих, Интересные истории, Возможность купания</td>
             <td>Красивые виды, доброжелательный гид, хорошая организация</td>
         </tr>
         <tr>
             <td>Поход к водопаду Джур-Джур</td>
             <td>2 700</td>
-            <td>Отличное место для фото, вкусные перекусы, невысокая сложность</td>
-            <td>Хороший уровень подготовки гида, удобная программа</td>
+            <td>Отличное место для фото, Вкусные перекусы, Невысокая сложность</td>
+            <td>Хвалят уровень подготовки гида, удобную программу</td>
         </tr>
         <tr>
             <td>Поход к водопаду Крым-Гиреевский</td>
             <td>Не указана</td>
-            <td>Мало туристов, уникальная природа, душевная атмосфера</td>
-            <td>Спокойствие, внимание гида, сочетание природы</td>
+            <td>Мало туристов, Уникальная природа, Душевная атмосфера</td>
+            <td>Спокойствие и умиротворение, внимание со стороны гида</td>
         </tr>
     </tbody>
 </table>
