--- a/include/comparison_table.html
+++ b/include/comparison_table.html
@@ -1,30 +1,30 @@
-<table border="1" cellspacing="0" cellpadding="5">
+<table>
     <thead>
         <tr>
-            <th>Название экскурсии</th>
-            <th>Цена (руб.)</th>
+            <th>Экскурсия</th>
             <th>Плюсы</th>
             <th>Отзывы</th>
+            <th>Цена</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>Прогулка к водопадам Джур-Джур и Руфабго</td>
-            <td>2 900</td>
-            <td>Подходит для начинающих, Интересные истории, Возможность купания</td>
-            <td>Красивые виды, доброжелательный гид, хорошая организация</td>
+            <td>Воеводский собор Александра Невского</td>
+            <td>Интересная история Кубанского казачества, Знакомство с архитектурным наследием, Возможность посетить действующий храм</td>
+            <td>Информативность гида, эмоциональная насыщенность, атмосфера уважения и тишины внутри собора</td>
+            <td>500 руб. за человека</td>
         </tr>
         <tr>
-            <td>Поход к водопаду Джур-Джур</td>
-            <td>2 700</td>
-            <td>Отличное место для фото, Вкусные перекусы, Невысокая сложность</td>
-            <td>Хвалят уровень подготовки гида, удобную программу</td>
+            <td>Краснодарская крепость и старый город</td>
+            <td>Погружение в прошлое Краснодара, Увлекательные факты о планировке города, Прогулка по живописным улицам</td>
+            <td>Высокие оценки знаний гида, интересный маршрут, возможность увидеть старый Краснодар глазами историка</td>
+            <td>490 руб. за человека</td>
         </tr>
         <tr>
-            <td>Поход к водопаду Крым-Гиреевский</td>
-            <td>Не указана</td>
-            <td>Мало туристов, Уникальная природа, Душевная атмосфера</td>
-            <td>Спокойствие и умиротворение, внимание со стороны гида</td>
+            <td>Музей истории Краснодара</td>
+            <td>Бесплатный доступ к истории города, Архитектурная ценность здания, Подходит для семей с детьми</td>
+            <td>Посетители отмечают интересные экспонаты и атмосферу музея</td>
+            <td>Бесплатно</td>
         </tr>
     </tbody>
 </table>
